--- a/index.html
+++ b/index.html
@@ -66,6 +66,71 @@
     </section>
   </main>
   <main class="container">
+    <div class="row">
+      <div class="col-12 col-md-10 offset-md-1">
+        <h1 class="marker biggie my-3">Basics</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum saepe odio qui non nihil, eligendi atque,
+          rem eum delectus temporibus facere pariatur quaerat. Nostrum esse dolorum molestias quaerat nam amet!</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 col-md-4">
+        <img src="//placehold.it/300x200" alt="">
+      </div>
+      <div class="col-12 col-md-4">
+        <h3 class="marker">Info</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum reprehenderit quas temporibus quaerat nulla
+          optio assumenda? Sapiente, optio repellat? Nisi doloremque consectetur culpa illo facilis neque perspiciatis
+          porro quae dolor.</p>
+      </div>
+      <div class="col-12 col-md-4">
+        <h3 class="marker">Statistics</h3>
+        <div class="progress my-3">
+          <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+            aria-valuemax="100" style="width: 60%;">Intellect</div>
+        </div>
+        <div class="progress my-3">
+          <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+            aria-valuemax="100" style="width: 60%;">Charisma</div>
+        </div>
+        <div class="progress my-3">
+          <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+            aria-valuemax="100" style="width: 60%;">Stamina</div>
+        </div>
+        <div class="progress my-3">
+          <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+            aria-valuemax="100" style="width: 60%;">Strength</div>
+        </div>
+        <div class="progress my-3 mb-5">
+          <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+            aria-valuemax="100" style="width: 60%;">Speed</div>
+        </div>
+      </div>
+    </div>
+  </main>
+  <main class="container-fluid">
+    <section class="row green">
+      <div class="col-12">
+        <div class="row">
+          <div class="col-12 col-md-10 offset-md-1">
+            <h1 class="marker biggie2 my-3">Physical</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-6 offset-md-1">
+            <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque assumenda non perspiciatis
+              qui ea
+              consequuntur officiis quibusdam laborum placeat doloribus. Dolore voluptatem in quas iste praesentium
+              debitis sit accusamus. Sint.</p>
+          </div>
+          <div class="col-12 col-md-4">
+            <img src="//placehold.it/500x300" class="img-fluid md-5">
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <main class="container">
     <section class="row">
       <div class="col-12 col-md-10 offset-md-1">
         <h1 class="marker biggie my-3">Personality</h1>
