--- a/index.html
+++ b/index.html
@@ -98,24 +98,24 @@
       <div class="col-12 col-md-4">
         <h3 class="marker">Statistics</h3>
         <div class="progress my-3">
-          <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-            aria-valuemax="100" style="width: 60%;">Intellect</div>
+          <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="30" aria-valuemin="0"
+            aria-valuemax="100" style="width: 30%;">INT (3)</div>
         </div>
         <div class="progress my-3">
-          <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-            aria-valuemax="100" style="width: 60%;">Charisma</div>
+          <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="20" aria-valuemin="0"
+            aria-valuemax="100" style="width: 20%;">CHAR (2)</div>
         </div>
         <div class="progress my-3">
-          <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-            aria-valuemax="100" style="width: 60%;">Stamina</div>
+          <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+            aria-valuemax="100" style="width: 80%;">STAMINA (8)</div>
         </div>
         <div class="progress my-3">
-          <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-            aria-valuemax="100" style="width: 60%;">Strength</div>
+          <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="20" aria-valuemin="0"
+            aria-valuemax="100" style="width: 20%;">STR (2)</div>
         </div>
         <div class="progress my-3 mb-5">
-          <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-            aria-valuemax="100" style="width: 60%;">Speed</div>
+          <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+            aria-valuemax="100" style="width: 50%;">SPD (5)</div>
         </div>
       </div>
     </div>
