--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
     </div>
     <div class="row">
       <div class="col-12 col-md-4">
-        <img src="//placehold.it/300x200" alt="">
+        <img src="/photos/monty-by-pikipekker.png" class="img-fluid my-3" alt="art by Pikipekker">
       </div>
-      <div class="col-12 col-md-4">
+      <div class=" col-12 col-md-4">
         <h3 class="marker">Info</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum reprehenderit quas temporibus quaerat nulla
           optio assumenda? Sapiente, optio repellat? Nisi doloremque consectetur culpa illo facilis neque perspiciatis
@@ -136,7 +136,7 @@
               debitis sit accusamus. Sint.</p>
           </div>
           <div class="col-12 col-md-4">
-            <img src="//placehold.it/500x300" class="img-fluid md-5">
+            <img src="/photos/monty-by-boogiepaw.png" class="img-fluid md-5" alt="art by boogiepaw">
           </div>
         </div>
       </div>
@@ -203,7 +203,7 @@
               beatae iure at. Recusandae, qui?</p>
           </div>
           <div class="col-12 col-md-4">
-            <img src="//placehold.it/500x300" class="img-fluid mb-5">
+            <img src="/photos/monty-by-wendigo.png" class="img-fluid mb-5" alt="art by WendigoEater">
           </div>
           <div class="col-12 col-md-3">
             <h3 class="marker">Extras</h3>
