--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     <section class="row gradient">
       <div class="col-12 col-md-4 offset-md-2 basic-info">
         <h1 class="marker">Monty</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, quam. Consequuntur, consequatur nihil.
-          Necessitatibus atque quaerat, ab quo hic harum culpa ratione voluptate, distinctio fugiat cumque, odio quos!
-          Nobis, enim?</p>
+        <p><i>"Hello! My name is Monty. It's so nice to meet you! I'm very excited to get to know everyone here. I
+            think
+            we'll all become really good friends, don't you?"</i></p>
       </div>
       <div class="col-12 col-md-6 basic-img">
         <img src="//placehold.it/300x300" class="img-fluid" alt="">
@@ -81,39 +81,51 @@
     <div class="row">
       <div class="col-12 col-md-10 offset-md-1">
         <h1 class="marker biggie my-3">Basics</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum saepe odio qui non nihil, eligendi atque,
-          rem eum delectus temporibus facere pariatur quaerat. Nostrum esse dolorum molestias quaerat nam amet!</p>
+        <p>Monty is what the kids call Chaotic Stupid. He's small, wildly energetic, younger than most, and therefore
+          everyone's self-assigned Annoying Little Brother. He may not be the smartest or the strongest, but he's quick
+          and tireless, and genuinely kind at heart.</p>
       </div>
     </div>
     <div class="row">
       <div class="col-12 col-md-4">
-        <img src="/photos/monty-by-pikipekker.png" class="img-fluid my-3" alt="art by Pikipekker">
+        <img src="/photos/monty-by-pikipekker.png" class="img-fluid mb-3" alt="art by Pikipekker">
       </div>
       <div class=" col-12 col-md-4">
         <h3 class="marker">Info</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum reprehenderit quas temporibus quaerat nulla
-          optio assumenda? Sapiente, optio repellat? Nisi doloremque consectetur culpa illo facilis neque perspiciatis
-          porro quae dolor.</p>
+        <h5>Name: Monty</h5>
+        <ul>
+          <li>Pronunciation: MON-tee</li>
+          <li>Meaning: "of the mountain"</li>
+        </ul>
+        <h5>Age: 6 months</h5>
+        <h5>Gender: Male</h5>
+        <ul>
+          <li>Gender Identity: he/him</li>
+        </ul>
+        <h5>Soul Class: Unknown</h5>
+        <ul>
+          <li>Soul Shade: Unknown</li>
+        </ul>
       </div>
       <div class="col-12 col-md-4">
         <h3 class="marker">Statistics</h3>
-        <div class="progress my-3">
+        <div class="progress my-4">
           <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="30" aria-valuemin="0"
             aria-valuemax="100" style="width: 30%;">INT (3)</div>
         </div>
-        <div class="progress my-3">
+        <div class="progress my-4">
           <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="20" aria-valuemin="0"
             aria-valuemax="100" style="width: 20%;">CHAR (2)</div>
         </div>
-        <div class="progress my-3">
+        <div class="progress my-4">
           <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="80" aria-valuemin="0"
             aria-valuemax="100" style="width: 80%;">STAMINA (8)</div>
         </div>
-        <div class="progress my-3">
+        <div class="progress my-4">
           <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="20" aria-valuemin="0"
             aria-valuemax="100" style="width: 20%;">STR (2)</div>
         </div>
-        <div class="progress my-3 mb-5">
+        <div class="progress my-4 mb-5">
           <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="50" aria-valuemin="0"
             aria-valuemax="100" style="width: 50%;">SPD (5)</div>
         </div>
