--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
     <div class="row">
       <div class="col-12 col-md-4">
-        <img src="/photos/monty-by-pikipekker.png" class="img-fluid mb-3" alt="art by Pikipekker">
+        <img src="photos/monty-by-pikipekker.png" class="img-fluid mb-3" alt="art by Pikipekker">
       </div>
       <div class=" col-12 col-md-4">
         <h3 class="marker">Info</h3>
@@ -148,7 +148,7 @@
               debitis sit accusamus. Sint.</p>
           </div>
           <div class="col-12 col-md-4">
-            <img src="/photos/monty-by-boogiepaw.png" class="img-fluid md-5" alt="art by boogiepaw">
+            <img src="photos/monty-by-boogiepaw.png" class="img-fluid md-5" alt="art by boogiepaw">
           </div>
         </div>
       </div>
@@ -215,7 +215,7 @@
               beatae iure at. Recusandae, qui?</p>
           </div>
           <div class="col-12 col-md-4">
-            <img src="/photos/monty-by-wendigo.png" class="img-fluid mb-5" alt="art by WendigoEater">
+            <img src="photos/monty-by-wendigo.png" class="img-fluid mb-5" alt="art by WendigoEater">
           </div>
           <div class="col-12 col-md-3">
             <h3 class="marker">Extras</h3>
