--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
     </div>
     <div class="row">
       <div class="col-12 col-md-4">
-        <img src="photos/monty-by-pikipekker.png" class="img-fluid mb-3" alt="art by Pikipekker">
+        <figure><img src="photos/monty-by-pikipekker.png" class="img-fluid" alt="art by Pikipekker">
+          <figcaption class="text-center mb-2">Art by Pikipekker</figcaption>
+        </figure>
       </div>
       <div class=" col-12 col-md-4">
         <h3 class="marker">Info</h3>
@@ -148,7 +150,9 @@
               debitis sit accusamus. Sint.</p>
           </div>
           <div class="col-12 col-md-4">
-            <img src="photos/monty-by-boogiepaw.png" class="img-fluid md-5" alt="art by boogiepaw">
+            <figure><img src="photos/monty-by-boogiepaw.png" class="img-fluid" alt="art by boogiepaw">
+              <figcaption class="text-center mb-2">Art by Boogiepaw</figcaption>
+            </figure>
           </div>
         </div>
       </div>
@@ -215,7 +219,9 @@
               beatae iure at. Recusandae, qui?</p>
           </div>
           <div class="col-12 col-md-4">
-            <img src="photos/monty-by-wendigo.png" class="img-fluid mb-5" alt="art by WendigoEater">
+            <figure><img src="photos/monty-by-wendigo.png" class="img-fluid" alt="art by WendigoEater">
+              <figcaption class="text-center mb-5">Art by WendigoEater</figcaption>
+            </figure>
           </div>
           <div class="col-12 col-md-3">
             <h3 class="marker">Extras</h3>
