starting to add content

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         <h5>Soul Class: Unknown</h5>
         <ul>
           <li>Soul Shade: Unknown</li>
+          <li>Level: Unknown</li>
         </ul>
       </div>
       <div class="col-12 col-md-4">
@@ -144,10 +145,25 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-6 offset-md-1">
-            <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque assumenda non perspiciatis
-              qui ea
-              consequuntur officiis quibusdam laborum placeat doloribus. Dolore voluptatem in quas iste praesentium
-              debitis sit accusamus. Sint.</p>
+            <h3 class="marker">Height and Weight</h3>
+            <p>13cm || 5lbs</p>
+            <h3 class="marker">Body Type</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique qui consectetur sed magnam
+              necessitatibus recusandae vitae accusantium! Sapiente exercitationem placeat delectus, dolores similique
+              quod temporibus provident minima sit pariatur suscipit.</p>
+            <h3 class="marker">Fur Texture</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta atque nam excepturi, aut, vel libero
+              consectetur expedita at saepe perferendis pariatur dolores veniam ipsa impedit illum ab, placeat facilis
+              voluptates.</p>
+            <h3 class="marker">Color</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque rem officiis sed dolore, ea harum
+              adipisci iusto commodi minus facilis, voluptate sit, necessitatibus voluptates doloremque non dolores
+              quia ad fuga.</p>
+            <h3 class="marker">General Health</h3>
+            <ul class="mb-5">
+              <li>Excellent Health</li>
+              <li>No scars or disabilities</li>
+            </ul>
           </div>
           <div class="col-12 col-md-4">
             <figure><img src="photos/monty-by-boogiepaw.png" class="img-fluid" alt="art by boogiepaw">
@@ -214,9 +230,17 @@
         <div class="row">
           <div class="col-12 col-md-3 offset-md-1">
             <h3 class="marker">Family</h3>
-            <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, reiciendis dolor recusandae
-              quasi dicta, enim aperiam reprehenderit tempora commodi ipsum illo placeat iusto tenetur voluptatem,
-              beatae iure at. Recusandae, qui?</p>
+            <p>DAD • Quinn [alive | unknown]</p>
+            <p>DAD • Desmond [alive | unknown]</p>
+            <p>BIO. MOTHER • Wynona [unknown]</p>
+            <p>BIO. FATHER • ??? [unknown]</p>
+            <h3 class="marker">Personal</h3>
+            <p>Sexuality • who knows lmao</p>
+            <p>Relationship Status • Single</p>
+            <ul class="mb-5">
+              <li>Past Relationships » none</li>
+              <li>Currently Interested In » no one, he's a kid</li>
+            </ul>
           </div>
           <div class="col-12 col-md-4">
             <figure><img src="photos/monty-by-wendigo.png" class="img-fluid" alt="art by WendigoEater">
@@ -225,10 +249,17 @@
           </div>
           <div class="col-12 col-md-3">
             <h3 class="marker">Extras</h3>
-            <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque assumenda non perspiciatis
-              qui ea
-              consequuntur officiis quibusdam laborum placeat doloribus. Dolore voluptatem in quas iste praesentium
-              debitis sit accusamus. Sint.</p>
+            <p>Fun Facts:</p>
+            <ul>
+              <li>Diagnosable ADHD, dyslexia, kleptomania, and insomnia. This kid is a bit of a mess.</li>
+              <li>Originally a character in the dA group OakClan</li>
+            </ul>
+            <p>Voice • a kid's voice with an irish brougue. Voice has not dropped yet.</p>
+            <p>Voice actor • <a href="https://youtu.be/KPpIiaWCKAY?t=16">Chris O'Dowd</a></p>
+            <a class="btn btn-success w-100 mb-1" href="https://open.spotify.com/user/12100239727/playlist/6aBVn793L2pe6S9VNi3yc4?si=OUgxp35BTMKss7BtfgHv8g"
+              role="button"><i class="fab fa-spotify"></i> Spotify Playlist</a>
+            <a class="btn btn-success w-100 mb-3" href="https://pin.it/6tko5jmpadb2ic" role="button"><i class="fab fa-pinterest"></i>
+              Pinterest Board</a>
           </div>
         </div>
       </div>
@@ -239,11 +270,6 @@
       <div class="col-12 col-md-10 offset-md-1">
         <h1 class="marker biggie my-3">History</h1>
         <h3 class="marker">Short Version</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum saepe odio qui non nihil, eligendi atque,
-          rem eum delectus temporibus facere pariatur quaerat. Nostrum esse dolorum molestias quaerat nam amet! Lorem,
-          ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint provident tempore ut, pariatur modi est id
-          itaque voluptatibus in aliquid architecto officiis, recusandae, enim aut dignissimos perferendis quisquam.
-          Tempora!</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum saepe odio qui non nihil, eligendi atque,
           rem eum delectus temporibus facere pariatur quaerat. Nostrum esse dolorum molestias quaerat nam amet! Lorem,
           ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint provident tempore ut, pariatur modi est id
