filled in information

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=KoHo|Permanent+Marker" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Monty's Profile</title>
@@ -73,7 +73,7 @@
             we'll all become really good friends, don't you?"</i></p>
       </div>
       <div class="col-12 col-md-6 basic-img">
-        <img src="//placehold.it/300x300" class="img-fluid" alt="">
+        <img src="photos/monty-headshot.png" class="img-fluid" alt="">
       </div>
     </section>
   </main>
@@ -146,19 +146,27 @@
         <div class="row">
           <div class="col-12 col-md-6 offset-md-1">
             <h3 class="marker">Height and Weight</h3>
-            <p>13cm || 5lbs</p>
+            <p>18cm || 6lbs</p>
             <h3 class="marker">Body Type</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique qui consectetur sed magnam
-              necessitatibus recusandae vitae accusantium! Sapiente exercitationem placeat delectus, dolores similique
-              quod temporibus provident minima sit pariatur suscipit.</p>
+            <p>Monty is rather small, even for his age, and quite lanky. Being the runt of his litter, he will probably
+              never be quite
+              as big as the other cats. He’s also still growing into his body, so he has long limbs and paws that are
+              too big for him
+              at his size. His tail is very expressive and almost always up, with a jaunty kink at the tip. His left
+              canine is a
+              snaggletooth.</p>
             <h3 class="marker">Fur Texture</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta atque nam excepturi, aut, vel libero
-              consectetur expedita at saepe perferendis pariatur dolores veniam ipsa impedit illum ab, placeat facilis
-              voluptates.</p>
+            <p>Monty’s fur is mostly of the medium- to short-length variety. It would be soft and fluffy (almost like
+              kit fur) if he
+              cleaned it… but he doesn’t. He almost completely ignores common grooming standards, and his fur tends to
+              be dirty and
+              stick up in random directions.</p>
             <h3 class="marker">Color</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque rem officiis sed dolore, ea harum
-              adipisci iusto commodi minus facilis, voluptate sit, necessitatibus voluptates doloremque non dolores
-              quia ad fuga.</p>
+            <p>Monty is basically a red marbled tabby. Most of his fur is reddish orange with dark swooping stripes, and
+              a more
+              tan/cream undercoat. His toes and tail tip are white, as well as a spot on his forehead and a little
+              v-shape on his
+              chest that sometimes looks like a heart. His eyes are blue.</p>
             <h3 class="marker">General Health</h3>
             <ul class="mb-5">
               <li>Excellent Health</li>
@@ -178,8 +186,57 @@
     <section class="row">
       <div class="col-12 col-md-10 offset-md-1">
         <h1 class="marker biggie my-3">Personality</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum saepe odio qui non nihil, eligendi atque,
-          rem eum delectus temporibus facere pariatur quaerat. Nostrum esse dolorum molestias quaerat nam amet!</p>
+        <p>Monty is quite the annoying little guy, in truth. Frankly, he is probably no one’s favorite cat, but
+          everyone
+          somehow just tolerates his existence anyway. He is ADHD with an emphasis on the “hyperactive” part. He is
+          constantly
+          in motion
+          and constantly has a high amount of energy and if you’re in his presence he probably won’t leave you alone. He
+          likes to
+          brag a lot but never has anything awesome to brag about, so really he just tells a bunch of boring and/or
+          stupid stories
+          that no one else is impressed by. But he doesn’t mind if no one really cares, as long as they listen with
+          some
+          fraction of attention.</p>
+        <p>He’s a severe kleptomaniac and will steal things from you. He’s not specific. He’ll steal your food, your
+          sleeping spot,
+          your accessoreis, shiny rocks… anything he finds interesting at the time.
+          He’s
+          absolutely unapologetic about it too, but if you ask, he’ll happily give it back. Basically if you find
+          yourself missing
+          something, Monty probably stole it.</p>
+        <p>There are a great many things Monty loves, including shiny objects, chasing leaves, hanging out with the Cool
+          Older Kids,
+          and pranking others. Rush is quite the trickster--as well as just stealing everyone’s stuff
+          all the time, he also just loves to trick others and outsmart them for a laugh. He’s pretty shameless about it
+          but also
+          very childish, oftentimes failing to realize when he's gone too far. It’s not one of his better traits.</p>
+        <p>Monty is a veritable wellspring of obscure and mostly
+          useless
+          information, especially when it comes to the Legendaries. He's a huge fanboy. He wouldn’t be able to tell you
+          how to catch a mouse,
+          but he would
+          be able to tell you the name, family, and life story of almost any Legendary cat. He is intelligent, but he
+          just
+          doesn’t
+          have time for the nonsense all the older cats want to teach him about hunting and surviving and being a
+          productive member of
+          society (blah blah blah).
+          He cares about other cats, and will thus absorb and store any information about them he thinks is interesting.
+        </p>
+        <p>Despite the fact that oftentimes others find him annoying, he likes being around a lot of other cats.
+          Especially the older boys--he's a huge groupie, and looks up to almost anyone older than him. He thinks
+          they're SO cool and wants to be just like them, which is why he's determined to prove himself in these trials.
+          He
+          often doesn’t do well
+          alone, and prefers the company of others. He lives a carefree and happy life, and he lives in the moment and
+          takes things as they come and
+          doesn’t let
+          stuff drag him down. He's a great guy to be around if you need cheered up, because he will certainly make
+          every effort to do so, even if he doesn't know or understand what you're sad about. He means well, and has a
+          good heart. If you get to know him in this way, he is loveable, even if he’s too much to handle for
+          extended
+          periods of time.</p>
       </div>
     </section>
     <section class="row">
@@ -188,9 +245,11 @@
         <div class="flip">click to show / hide</div>
         <div class="panel">
           <h3><i class="fas fa-plus"></i></h3>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam molestiae ducimus sit at
-          quam eveniet aut est corrupti, veritatis ad harum itaque totam, incidunt nihil, commodi debitis dolores
-          nesciunt voluptates.
+          <p>Friendly</p>
+          <p>Cheerful</p>
+          <p>Optimistic</p>
+          <p>Loyal</p>
+          <p>Smart(ish)</p>
         </div>
       </div>
       <div class="col-12 col-md-4 mt-3">
@@ -198,10 +257,11 @@
         <div class="flip2">click to show / hide</div>
         <div class="panel2">
           <h3><i class="fas fa-equals"></i></h3>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam molestiae ducimus sit
-          at
-          quam eveniet aut est corrupti, veritatis ad harum itaque totam, incidunt nihil, commodi debitis dolores
-          nesciunt voluptates.
+          <p>Energetic</p>
+          <p>Talkative</p>
+          <p>Curious</p>
+          <p>Excitable</p>
+          <p>Daring</p>
         </div>
       </div>
       <div class="col-12 col-md-4 mt-3">
@@ -209,10 +269,11 @@
         <div class="flip3">click to show / hide</div>
         <div class="panel3">
           <h3><i class="fas fa-minus"></i></h3>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam molestiae ducimus sit
-          at
-          quam eveniet aut est corrupti, veritatis ad harum itaque totam, incidunt nihil, commodi debitis dolores
-          nesciunt voluptates.
+          <p>Childish</p>
+          <p>Annoying</p>
+          <p>Prankster</p>
+          <p>Oblivious</p>
+          <p>Short Attention Span</p>
         </div>
       </div>
     </section>
@@ -230,9 +291,9 @@
         <div class="row">
           <div class="col-12 col-md-3 offset-md-1">
             <h3 class="marker">Family</h3>
-            <p>DAD • Quinn [alive | unknown]</p>
-            <p>DAD • Desmond [alive | unknown]</p>
-            <p>BIO. MOTHER • Wynona [unknown]</p>
+            <p>DAD • Quinn [unknown | unknown]</p>
+            <p>DAD • Desmond [alive | River Colony]</p>
+            <p>BIO. MOTHER • Wynona [alive | Plains Colony]</p>
             <p>BIO. FATHER • ??? [unknown]</p>
             <h3 class="marker">Personal</h3>
             <p>Sexuality • who knows lmao</p>
@@ -256,9 +317,11 @@
             </ul>
             <p>Voice • a kid's voice with an irish brougue. Voice has not dropped yet.</p>
             <p>Voice actor • <a href="https://youtu.be/KPpIiaWCKAY?t=16">Chris O'Dowd</a></p>
-            <a class="btn btn-success w-100 mb-1" href="https://open.spotify.com/user/12100239727/playlist/6aBVn793L2pe6S9VNi3yc4?si=OUgxp35BTMKss7BtfgHv8g"
+            <a class="btn btn-success w-100 mb-1"
+              href="https://open.spotify.com/user/12100239727/playlist/6aBVn793L2pe6S9VNi3yc4?si=OUgxp35BTMKss7BtfgHv8g"
               role="button"><i class="fab fa-spotify"></i> Spotify Playlist</a>
-            <a class="btn btn-success w-100 mb-3" href="https://pin.it/6tko5jmpadb2ic" role="button"><i class="fab fa-pinterest"></i>
+            <a class="btn btn-success w-100 mb-3" href="https://pin.it/6tko5jmpadb2ic" role="button"><i
+                class="fab fa-pinterest"></i>
               Pinterest Board</a>
           </div>
         </div>
@@ -270,29 +333,69 @@
       <div class="col-12 col-md-10 offset-md-1">
         <h1 class="marker biggie my-3">History</h1>
         <h3 class="marker">Short Version</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum saepe odio qui non nihil, eligendi atque,
-          rem eum delectus temporibus facere pariatur quaerat. Nostrum esse dolorum molestias quaerat nam amet! Lorem,
-          ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint provident tempore ut, pariatur modi est id
-          itaque voluptatibus in aliquid architecto officiis, recusandae, enim aut dignissimos perferendis quisquam.
-          Tempora!</p>
+        <ul>
+          <li>Monty was born in Plains Colony to his mother, Wynona, and an unknown father.</li>
+          <li>He was one of a litter of five--while all of his siblings were strong and healthy, he was the runt of the
+            litter…
+            noticeably smaller and weaker.</li>
+          <li>Wynona, thinking his chances of survival were slim, essentially abandoned him to focus her attending on
+            keeping her
+            other four kits alive.</li>
+          <li>He was taken in by Quinn, a childhood friend of Wynona who couldn’t stand by and watch the little guy die.
+            He even gave
+            him his name, since Wynona hadn’t wanted to name him for fear of him dying.</li>
+          <li>Still very young, Monty was taken with Quinn when he and his mate, Desmond, deserted the Plains Corps (and
+            Plains Colony
+            itself) after a bad run-in that left Desmond injured.</li>
+          <li>The trio escaped Plains Colony and headed for Forest Colony, Quinn taking care both of young Monty and
+            injured Desmond.</li>
+          <li>After a couple weeks on their own, they eventually came to Forest Colony. There, they were welcomed in by
+            the locals and
+            taken care of.</li>
+          <li>They spend several months at Forest Colony while Monty grew up and Desmond recovered from his injuries.
+            Monty began
+            showing his penchant for being extremely mischievous and getting into all kinds of trouble. Quinn especially
+            is always
+            very patient and understanding with him.</li>
+          <li>When hearing of the call to Paradise Valley, Monty was wildly excited and begged his dads to let him go.
+          </li>
+          <li>Quinn doesn’t want to split up, but Desmond insists. Monty is RARING to go anyway. Desmond basically tells
+            Quinn to go
+            drop him off, and then come back to find me.</li>
+          <li>Quinn and Monty set off for Paradise Valley. It was going to take them a week, if not longer, to get
+            there, but Monty is
+            quite determined.</li>
+          <li>Several days in Quinn wakes up one morning with a fierce migraine. He thinks nothing of it, but it
+            persists all day,
+            getting worse and worse.</li>
+          <li>The second day, Quinn does something he has never done before: he loses his patience and snaps at Monty.
+            Both Monty and
+            Quinn are taken aback. It’s then that Quinn realizes what’s happening to him.</li>
+          <li>On the third day, Quinn knows he has the red plague and is about to die. Meanwhile, Monty is oblivious to
+            his dad’s
+            symptoms, focused only on the goal of getting to Paradise Valley and becoming Cool™. Quinn, not wanting
+            Monty to have to
+            witness what’s about to happen to him, stops and tells Monty that he should go on without him.</li>
+          <li>Quinn knows he’ll never see Monty again, but Monty is still oblivious. Excited to finally be on his own
+            and away from
+            his parents, he only gives a quick goodbye before dashing off.</li>
+          <li>(Quinn watches him go and waits until long after he can’t see him anymore).</li>
+          <li>Monty relishes his alone time (though nights alone scare him a bit). It only takes a couple more days
+            before he reaches
+            Paradise Valley. Seeing so many older, cooler cats there, he is Very Excited and determined to face the
+            trials and prove
+            himself.</li>
+        </ul>
         <h3 class="marker">Long Version</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum saepe odio qui non nihil, eligendi atque,
-          rem eum delectus temporibus facere pariatur quaerat. Nostrum esse dolorum molestias quaerat nam amet! Lorem,
-          ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint provident tempore ut, pariatur modi est id
-          itaque voluptatibus in aliquid architecto officiis, recusandae, enim aut dignissimos perferendis quisquam.
-          Tempora!</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum saepe odio qui non nihil, eligendi atque,
-          rem eum delectus temporibus facere pariatur quaerat. Nostrum esse dolorum molestias quaerat nam amet! Lorem,
-          ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint provident tempore ut, pariatur modi est id
-          itaque voluptatibus in aliquid architecto officiis, recusandae, enim aut dignissimos perferendis quisquam.
-          Tempora!</p>
+        <p>((TBA))</p>
       </div>
     </div>
   </main>
   <main class="container-fluid">
     <section class="row green">
       <div class="col-12 col-md-8 offset-md-2 text-center">
-        <p class="mt-3">Coding credit © <a href="https://github.com/ClairRogers">Clair Rogers</a> aka <a href="https://www.deviantart.com/caliberarts">CaliberArts</a></p>
+        <p class="mt-3">Coding credit © <a href="https://github.com/ClairRogers">Clair Rogers</a> aka <a
+            href="https://www.deviantart.com/caliberarts">CaliberArts</a></p>
       </div>
     </section>
   </main>
