--- a/index.html
+++ b/index.html
@@ -34,37 +34,32 @@
 </head>
 
 <body>
+  <nav class="navbar sticky-top navbar-light navbar-expand-md justify-content-center">
+    <h1 class="marker d-flex w-50">Monty's Profile</h1>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
+      <ul class="nav navbar-nav ml-auto px-5 w-100">
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#basics">Baiscs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#appearance">Appearance</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#personality">Personality</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#relations">Relations</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#history">History</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <main class="container-fluid">
-    <nav class="row h100 d-flex">
-      <div class="col-12 col-md-4 offset-md-1 text-center">
-        <h1 class="marker">Monty's Profile</h1>
-      </div>
-      <div class="col-4 col-md-1 offset-md-1 text-center mt-3">
-        <a href="#basics">
-          <p>Basics</p>
-        </a>
-      </div>
-      <div class="col-4 col-md-1 text-center mt-3">
-        <a href="#appearance">
-          <p>Appearance</p>
-        </a>
-      </div>
-      <div class="col-4 col-md-1 text-center mt-3">
-        <a href="#personality">
-          <p>Personality</p>
-        </a>
-      </div>
-      <div class="col-6 col-md-1 text-center mt-3">
-        <a href="#relations">
-          <p>Relations</p>
-        </a>
-      </div>
-      <div class="col-6 col-md-1 text-center mt-3">
-        <a href="#history">
-          <p>History</p>
-        </a>
-      </div>
-    </nav>
     <section class="row gradient">
       <div class="col-12 col-md-4 offset-md-2 basic-info">
         <h1 class="marker">Monty</h1>
