--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
       <ul class="nav navbar-nav ml-auto px-5 w-100">
         <li class="nav-item">
-          <a class="nav-link text-white" href="#basics">Baiscs</a>
+          <a class="nav-link text-white" href="#basics">Basics</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="#appearance">Appearance</a>
@@ -394,6 +394,18 @@
       </div>
     </section>
   </main>
+
+
+
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
